[package]
name = "ohcrab"
version = "0.1.2"
edition = "2021"
description = "Fix your command line magically"
authors = ["Luiz Otavio Vilas Boas Oliveira <luiz.vbo@gmail.com>"]
license = "MIT"
repository = "https://github.com/luizvbo/oh-crab"
readme = "README.md"
keywords = ["fix", "command", "terminal"]
categories = ["command-line-utilities"]
rust-version = "1.70.0"

[dependencies]
clap = { version = "4.4.7", features = ["cargo", "env"] }
shellwords = "1.1.0"
which = "4.4.0"
similar = "2.2.1"
console = "0.15.7"
log = "0.4.20"
env_logger = "0.10.0"
dirs = "5.0.1"
regex = "1.10.2"
is_executable = "1.0.1"

[profile.release]
lto = true          # Enable link-time optimization
strip = true        # Strip symbols from binary*
codegen-units = 1   # Reduce number of codegen units to increase optimizations

[dev-dependencies]
mockall = "0.12.0"
tempfile = "3.8.1"

[target.aarch64-apple-darwin]
linker = "/usr/local/bin/aarch64-linux-musl-gcc"

