[package]
name = "ohcrab"
version = "0.7.5"
edition = "2021"
description = "Fix your command line magically"
authors = ["Luiz Otavio Vilas Boas Oliveira <luiz.vbo@gmail.com>"]
license = "MIT"
repository = "https://github.com/luizvbo/oh-crab"
readme = "README.md"
keywords = ["fix", "command", "terminal"]
categories = ["command-line-utilities"]
rust-version = "1.70.0"

[dependencies]
clap = { version = "4.4.7", features = ["cargo", "env"] }
shlex = "1.3.0"
which = "4.4.0"
fuzzt = { version = "0.3.1", default-features = false }
console = "0.15.7"
dirs = "5.0.1"
regex = "1.10.2"
is_executable = "1.0.1"
zip = { version = "1.1.3", optional = true }
tar = { version = "0.4.40", optional = true }

[features]
zip = ["dep:zip"]
tar = ["dep:tar"]

[profile.release]
lto = true        # Enable link-time optimization
strip = true      # Strip symbols from binary*
codegen-units = 1 # Reduce number of codegen units to increase optimizations

[dev-dependencies]
mockall = "0.12.0"
tempfile = "3.10.1"
rstest = "0.18.2"
assert_cmd = "2.0.13"
predicates = "3.1.0"

[target.aarch64-apple-darwin]
linker = "/usr/local/bin/aarch64-linux-musl-gcc"
